# sway.module_render

./: .bettercodehub.yml  .clang-format  .codecov.yml  .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  index.html  server.py
docs/doxygen/: doxyfile.doxy
docs/doxygen/pages/: mainpage.md
examples/: README.md
examples/01-material/: CMakeLists.txt  README.md  main.cpp
examples/01-material-wasm/: CMakeLists.txt  README.md  main.cpp  webapp.cpp  webapp.hpp
examples/02-spritebatch-wasm/: CMakeLists.txt  main.cpp  webapp.cpp  webapp.hpp
examples/prims/: main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/triangle2/: CMakeLists.txt  main.cpp
include/sway/: graphics.h
include/sway/graphics/: drawable.h  drawablecreateinfo.h  material.h  materialinitialinfo.h  materialmanager.h  plugin.h  plugindescriptor.h  prereqs.h  renderqueue.h  renderqueuepriorities.h  rendersubqueue.h  rendersubqueuegroups.h  rendersubsystem.h  staticmesh.h  vertexchannel.h  vertexchannel.inl  vertexdata.h  vertexdata.inl
include/sway/graphics/primitives/: quad.h
lib/: runtime-exports.json
lib/cxx/: CMakeLists.txt
lib/cxx/include/sway/: render.hpp
lib/cxx/include/sway/render/: atlas.hpp  effect.hpp  flippable.hpp  flipper.hpp  geometry.hpp  geometrycreateinfo.hpp  geometryindexedvertexdata.hpp  geometryvertexattrib.hpp  geometryvertexattribset.hpp  geometryvertexdata.hpp  global.hpp  image.hpp  material.hpp  materialdescriptor.hpp  materialmanager.hpp  postprocessing.hpp  prereqs.hpp  rendercomponent.hpp  renderpass.hpp  renderpassmanager.hpp  renderpasstypes.hpp  renderqueue.hpp  renderqueuepass.hpp  renderstages.hpp  renderstate.hpp  rendersubqueue.hpp  rendersubqueuegroups.hpp  rendersubsystem.hpp  rendertarget.hpp  sprite.hpp  sprite_debug.hpp  spriteanimation.hpp  spriteanimationclip.hpp  spriteanimationmodes.hpp  spritebatch.hpp  spritesheet.hpp  typedefs.hpp  updatable.hpp
lib/cxx/include/sway/render/geom/: geom.hpp  geom.inl  geombuilder.hpp  geombuilder.inl  geomindexedvertexdata.hpp  geominstance.hpp  geominstancedatadivisor.hpp  geomvertexattrib.hpp  geomvertexattrib.inl  geomvertexattribbase.hpp  geomvertexdata.hpp  geomvertexdata.inl  geomvertexdatabase.hpp
lib/cxx/include/sway/render/pipeline/: blenddescriptor.hpp  rendercommand.hpp  rendercommandhandler.hpp
lib/cxx/include/sway/render/ppe/: fullscreenquadrilateral.hpp  postprocessing.hpp  postprocessingpass.hpp  screenquad.hpp  silhouettepostprocessing.hpp
lib/cxx/include/sway/render/procedurals/: shape.hpp
lib/cxx/include/sway/render/procedurals/guides/: axis.hpp  line.hpp
lib/cxx/include/sway/render/procedurals/prims/: plane.hpp  plane_debug.hpp  plane_list.hpp  plane_strip.hpp  quad.hpp  quadrilateral.hpp  quadrilateralstrip.hpp
lib/cxx/include/sway/render/temp/: forwardrenderer.hpp  pipeline.hpp  renderer.hpp
lib/cxx/include/sway/render/temp/pipeline/: renderer.hpp  renderertypes.hpp  technique.hpp
lib/cxx/include/sway/render/temp/pipeline/stage/: stage.hpp  stagegroupindexes.hpp  stagequeue.hpp  stagetypes.hpp
lib/cxx/include/sway/render/temp/pipeline/stage/pass/: _passactions.hpp  _passcreateinfo.hpp  pass.hpp  passqueue.hpp  passtypes.hpp
lib/cxx/include/sway/render/temp/pipeline/stage/pass/subqueues/: geompass.hpp
lib/cxx/src/: effect.cpp  geometry.cpp  global.cpp  image.cpp  material.cpp  materialmanager.cpp  postprocessing.cpp  renderpass.cpp  renderqueue.cpp  renderqueuepass.cpp  renderstate.cpp  rendersubqueue.cpp  rendersubsystem.cpp  rendertarget.cpp  sprite.cpp  sprite_debug.cpp  spriteanimation.cpp  spritebatch.cpp  spritesheet.cpp
lib/cxx/src/geom/: geom.cpp  geombuilder.cpp  geominstance.cpp
lib/cxx/src/ppe/: postprocessing.cpp  postprocessingpass.cpp
lib/cxx/tests/: CMakeLists.txt  README.md  effect.spec.cpp  geometry.spec.cpp  prim.spec.cpp  spritesheet.spec.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  effect.spec.cpp  geometry.spec.cpp  geomvertexdata.spec.cpp  material.spec.cpp  pipeline.spec.cpp  plugfixture.cpp  plugfixture.hpp  prim.spec.cpp  spritesheet.spec.cpp
lib/include/sway/: graphics.hpp  render.hpp
lib/include/sway/graphics/: drawable.hpp  geometrycreateinfo.hpp  material.hpp  materialmanager.hpp  prereqs.hpp  renderqueue.hpp  rendersubqueue.hpp  rendersubqueuegroups.hpp  rendersubsystem.hpp  staticmesh.hpp  vertexchannel.hpp  vertexchannel.inl  vertexdata.hpp  vertexdata.inl  vertexdatachannel.hpp
lib/include/sway/graphics/primitives/: quad.hpp
lib/include/sway/graphics/prims/: box.hpp
lib/include/sway/graphics/procedurals/prims/: box.hpp
lib/include/sway/render/: geometry.hpp  geometrycreateinfo.hpp  geometryindexedvertexdata.hpp  geometryvertexattrib.hpp  geometryvertexattribset.hpp  geometryvertexdata.hpp  image.hpp  material.hpp  materialmanager.hpp  postprocessing.hpp  rendercomponent.hpp  renderpass.hpp  renderqueue.hpp  renderstate.hpp  rendersubqueue.hpp  rendersubqueuegroups.hpp  rendersubsystem.hpp  rendertarget.hpp  silhouettepostprocessing.hpp  sprite.hpp  sprite_debug.hpp  spriteanimation.hpp  spriteboundingbox.hpp
lib/include/sway/render/pipeline/: rendercommand.hpp  rendercommandhandler.hpp
lib/src/: drawable.cpp  effect.cpp  geometry.cpp  global.cpp  image.cpp  material.cpp  materialmanager.cpp  renderpass.cpp  renderqueue.cpp  renderstate.cpp  rendersubqueue.cpp  rendersubsystem.cpp  rendertarget.cpp  sprite.cpp  sprite_debug.cpp  spriteanimation.cpp  staticmesh.cpp  vertexdata.cpp
lib/src/primitives/: quad.cpp
lib/src/prims/: box.cpp
lib/src/procedurals/prims/: box.cpp
lib/tests/: CMakeLists.txt  README.md  prim.spec.cpp  renderqueue.spec.cpp  rendersubqueue.spec.cpp  rendersubsystem.spec.cpp
scripts/travis/: codecov.sh  install-cmake.sh
src/: drawable.cpp  material.cpp  materialmanager.cpp  plugin.cpp  renderqueue.cpp  rendersubqueue.cpp  rendersubsystem.cpp  staticmesh.cpp  vertexdata.cpp
src/primitives/: quad.cpp
tests/: CMakeLists.txt  main.cpp  renderqueue.spec.cpp  rendersubqueue.spec.cpp  rendersubsystem.spec.cpp
(+5 files in other folders)
